# vt-optimizer-rs

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DO_NO_HARM.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  PRIVACY.md  README.md  SECURITY.md  SPEC.md  SUPPORT.md  release.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  main-to-release-pr.yml  release-merge-tag.yml  release-version-bump.yml  release.yml
docs/: DATA_EXPORT.md  DPG.md  HOW_TO.md  MILESTONE.md  RELEASE.md  SPEC.md
docs/ADR/: parallelize_mbtiles.md
src/: cli.rs  format.rs  lib.rs  main.rs  mbtiles.rs  output.rs  pmtiles.rs  style.rs
src/mbtiles/: algo.rs  mod.rs  processing.rs  stats.rs  types.rs
src/pmtiles/: algo.rs  mod.rs  processing.rs  stats.rs  types.rs
tests/: cli.rs  format.rs  mbtiles.rs  mbtiles_layers.rs  mbtiles_list.rs  mbtiles_recommend.rs  mbtiles_summary.rs  mbtiles_zoom.rs  output_ndjson.rs  output_stats.rs  output_text.rs  output_tile_info_format.rs  pmtiles.rs  prune.rs  simplify.rs
