[package]
name = "tile-prune"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3.10"
hilbert_2d = "1.1"
varint-rs = "2.2"
indicatif = "0.17"
mvt-reader = "2.2.0"
flate2 = "1"
nu-ansi-term = "0.50"
brotli = "3.5"
mvt = "0.10.3"
protobuf = "3.7"
geo-types = "0.7"

[dev-dependencies]

[lib]
name = "tile_prune"
path = "src/lib.rs"

[[bin]]
name = "tile-prune"
path = "src/main.rs"
