[package]
name = "vt-optimizer-rs"
version = "0.5.0"
edition = "2024"
license = "MIT"
description = "A fast CLI to inspect and optimize MBTiles/PMTiles vector tiles."
homepage = "https://github.com/yuiseki/vt-optimizer-rs"
repository = "https://github.com/yuiseki/vt-optimizer-rs"
readme = "README.md"
keywords = ["vt-optimizer", "vector-tiles", "mbtiles", "pmtiles", "geospatial", "cli", "optimizer"]
categories = ["command-line-utilities"]
exclude = [
	".cargo_vcs_info.json",
	".tool-versions",
	"Cargo.toml.orig",
	"Cargo.lock",
	".vscode/*",
	".github/*",
	".gitignore",
	".env.sample",
	"release.toml",
	"renovate.json",
	"tmp/**",
	"target/**",
	"tests/**",
]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
tempfile = "3.10"
hilbert_2d = "1.1"
varint-rs = "2.2"
indicatif = "0.18"
mvt-reader = "2.2.0"
flate2 = "1"
nu-ansi-term = "0.50"
brotli = "8.0"
mvt = "0.10.3"
protobuf = "3.7"
geo-types = "0.7"
crossbeam-channel = "0.5"
rayon = "1"

[dev-dependencies]

[lib]
name = "vt_optimizer"
path = "src/lib.rs"

[[bin]]
name = "vt-optimizer"
path = "src/main.rs"
